syntax = "proto3";

package api.files.v1;

import "google/protobuf/empty.proto";

option go_package = "api/austin-v2/app/files/v1;v1";
option java_multiple_files = true;
option java_package = "api.files.v1";

service Files {
	rpc GetOssStsToken (google.protobuf.Empty) returns (OssStsTokenResponse);
	rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
}

message OssStsTokenResponse {
	string access_key = 1;
	string access_secret = 2;
	string expiration = 3;
	string security_token = 4;
	string end_point = 5;
	string bucket_name = 6;
	string region = 7;
	string url = 8;
}

message UploadFileRequest {
	string file_name = 1;
	string file_type = 2;
	bytes content = 3;
}

message UploadFileResponse {
	string url = 1;
}
